--- a/Learnings/Python_learning.ipynb
+++ b/Learnings/Python_learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8AbHnQr2dw4j4zUnWqJyc",
+      "authorship_tag": "ABX9TyNotI22FB3G/DGihCyX/Hjv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "id": "VL-pdxF3oziG",
         "outputId": "06a52799-b921-4221-ac44-5be0c0c273f9"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -136,7 +136,7 @@
         "id": "JmJ5l0djm3cF",
         "outputId": "1b514115-8a20-47bd-bedd-67f1b3faf78f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
         "id": "rQSJodPtneWv",
         "outputId": "ba4b2da2-1eb2-4457-a702-7bc8a5276353"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +194,7 @@
         "id": "E9_qwrRmnv2e",
         "outputId": "d027c273-d731-43db-810d-51af44d8e5a0"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +224,7 @@
         "id": "hhyaTjRhn6IZ",
         "outputId": "06153e6d-dd0a-43cf-cab8-08a9042ddfcc"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
         "id": "hTYoh_lqp5B1",
         "outputId": "63b4b3d7-34eb-4074-b43a-bd106945eac2"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +309,7 @@
         "id": "3zA4SYcys8ud",
         "outputId": "ebdadc4f-5a59-4fa3-f578-02ddaa40918a"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +333,7 @@
         "id": "bnbg0SfO0Uoh",
         "outputId": "2c32c680-a58a-4222-cea9-e3ca713fa66d"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -365,7 +365,7 @@
         "id": "6wn9EE602g4b",
         "outputId": "0c0aada6-efe7-437c-9a35-15bb376bdc42"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +406,7 @@
         "id": "UzbLvhQ13O9m",
         "outputId": "0be7726d-b765-46c8-883a-39cb9852ff73"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,6 +414,66 @@
           "text": [
             "The original string is : Aathi\n",
             "The string after binary conversion : 0100000101100001011101000110100001101001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Algorithms\n"
+      ],
+      "metadata": {
+        "id": "P-V8awu9hRxO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1<<4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l9Is5BbAhTly",
+        "outputId": "23f06e2f-160e-42ba-8170-e81abb901a66"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "16"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=\"1281\"\n",
+        "x = int(x)\n",
+        "print(x+2 )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "favEvOt8hdbN",
+        "outputId": "ab903b5e-e745-42df-bc52-a7fa6c0db39d"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1283\n"
           ]
         }
       ]
