--- a/Learnings/Python_learning.ipynb
+++ b/Learnings/Python_learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNotI22FB3G/DGihCyX/Hjv",
+      "authorship_tag": "ABX9TyP8Py7IgkQCgj7zztZ9A6T6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -439,7 +439,7 @@
         "id": "l9Is5BbAhTly",
         "outputId": "23f06e2f-160e-42ba-8170-e81abb901a66"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +467,7 @@
         "id": "favEvOt8hdbN",
         "outputId": "ab903b5e-e745-42df-bc52-a7fa6c0db39d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,6 +477,114 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "staircase problem where u can either go 1 step or 2 step. there are n number\n",
+        " of steps\n",
+        "\n",
+        " input = 2\n",
+        " ouput: 2\n",
+        "  reason :\n",
+        "  1+1 step\n",
+        "  2 step\n",
+        "\n",
+        "  input =  3\n",
+        "  ouput: 3\n",
+        "  reason:\n",
+        "  1+1+1 step\n",
+        "  2+1 step\n",
+        "  1+2 step\n",
+        "\n",
+        "  input = 15\n",
+        "  output: 987"
+      ],
+      "metadata": {
+        "id": "awp_IUvkRGew"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fibonacci(n):\n",
+        "  if n==0:\n",
+        "    return 0\n",
+        "  elif n==1 or n==2:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return fibonacci(n-1) + fibonacci(n-2)\n",
+        "\n",
+        "print(\"The no. of ways stairs can be climbed: {0}\".format(fibonacci(int(input(\"Enter no. of stairs\"))+1)))"
+      ],
+      "metadata": {
+        "id": "sLL88VehQH8l",
+        "outputId": "13611932-14ec-4fcf-e3d8-d7ca34ae5158",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter no. of stairs15\n",
+            "The no. of ways stairs can be climbed: 987\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "list of words in a list and find anagrams and group them within the list\n",
+        "\n",
+        "strs =[\"eat\",\"tea\",\"ate\",\"nat\",\"tan\",\"bed\"]"
+      ],
+      "metadata": {
+        "id": "N2pjzC2-TdDj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strs =[\"eat\",\"tea\",\"ate\",\"nat\",\"tan\",\"bed\",\"roam\",\"deb\"]\n",
+        "output = []\n",
+        "if len(strs)==1:\n",
+        "  output.append(strs)\n",
+        "  print(output)\n",
+        "else:\n",
+        "  for i in range(0,len(strs)):\n",
+        "    done = 0\n",
+        "    temp =[]\n",
+        "    temp.append(strs[i])\n",
+        "    for k in output:\n",
+        "      if strs[i] in k:\n",
+        "        done = 1\n",
+        "    if done ==1:\n",
+        "      continue\n",
+        "    for j in range(i+1,len(strs)):\n",
+        "      if len(strs[i])!=len(strs[j]):\n",
+        "        continue\n",
+        "      else:\n",
+        "        not_exist = 0\n",
+        "        for q in strs[i]:\n",
+        "          if q not in strs[j]:\n",
+        "            not_exist = 1\n",
+        "        if not_exist ==1:\n",
+        "          continue\n",
+        "        else:\n",
+        "          temp.append(strs[j])\n",
+        "    output.append(temp)\n",
+        "print(output)"
+      ],
+      "metadata": {
+        "id": "kPZfphOcTcK0"
+      },
+      "execution_count": 17,
+      "outputs": []
     }
   ]
 }
