--- a/check_colab/first_github.ipynb
+++ b/check_colab/first_github.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWLC/1GYBk81drnJ/BNF6x",
+      "authorship_tag": "ABX9TyNe67hgMO9yUlioTeexGBqf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/oCt-raiN/My_colab/blob/main/first_github.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/oCt-raiN/My_colab/blob/main/check_colab/first_github.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,10 @@
         "id": "k4dtT5J-EUjf"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "r = \"adssd\"\n",
+        "print(r)"
+      ]
     }
   ]
 }
